test/errors/control_flow/type_check_context_fail.hy
// EXPECT_OUTPUT: Type checks with 'is' are only supported in conditional expressions
int value = 5
bool ok = value is int
